Bug - Responsive at 281px.

--- a/css/main.css
+++ b/css/main.css
@@ -542,6 +542,99 @@ body {
   border-bottom: none;
 }
 
+/* Section Company News */
+.section-company-news .container .company-news-slider {
+  background: #f3f3f3;
+  position: relative;
+}
+.section-company-news .container .company-news-slider .owl-prev,
+.section-company-news .container .company-news-slider .owl-next {
+  position: absolute;
+}
+.section-company-news .container .company-news-slider .owl-prev a,
+.section-company-news .container .company-news-slider .owl-next a {
+  color: #aaa;
+  font-size: 16px;
+  font-weight: bold;
+}
+.section-company-news .container .company-news-slider .owl-prev a:hover,
+.section-company-news .container .company-news-slider .owl-next a:hover {
+  text-decoration: none;
+}
+.section-company-news .container .company-news-slider .owl-prev {
+  top: -36px;
+  right: 10px;
+}
+.section-company-news .container .company-news-slider .owl-next {
+  top: -36px;
+  right: -5px;
+}
+.section-company-news .container .company-news-slider h4 {
+  border-top: solid 1px #ddd;
+  border-bottom: dotted 1px #ddd;
+  color: #e12;
+  font-size: 14px;
+  font-weight: bold;
+  padding: 0 10px;
+  line-height: 30px;
+  margin: 0;
+  text-transform: uppercase;
+}
+.section-company-news .container .company-news-slider .slider-3 {
+  clear: both;
+  padding: 0 6px;
+}
+.section-company-news .container .company-news-slider .slider-3 .item-slider-3 {
+  margin-top: 10px;
+  padding-left: 0;
+  border-right: solid 1px #f3f3f3;
+    /* position: relative;
+a {
+    &:hover {
+        text-decoration: none;
+    }
+    &:hover h3 {
+        color: #e12;
+    }
+    &:hover .icon-play {
+        background-image: url('../img/icon-play-video_hover.png');
+    }
+    .icon-play {
+        position: absolute;
+        top: 66px;
+        background-image: url('../img/icon-play-video.png');
+        background-repeat: no-repeat;
+        width: 40px;
+        height: 40px;
+    }
+    h3 {
+        font-size: 13px;
+        color: #222;
+        outline: none;
+    }
+} */
+}
+.section-company-news .container .company-news-slider .slider-3 .item-slider-3 ul li {
+  max-width: 240px;
+}
+.section-company-news .container .company-news-slider .slider-3 .item-slider-3 ul li a:hover {
+  text-decoration: none;
+}
+.section-company-news .container .company-news-slider .slider-3 .item-slider-3 ul li a:hover .title h3 {
+  color: #e12;
+}
+.section-company-news .container .company-news-slider .slider-3 .item-slider-3 ul li a img {
+  float: left;
+  margin: 2px 10px 10px 0;
+  max-width: 115px;
+}
+.section-company-news .container .company-news-slider .slider-3 .item-slider-3 ul li a .title h3 {
+  color: #444;
+  font-size: 12px;
+  font-weight: bold;
+  margin-top: 0;
+}
+
 /* LAYOUTS - Page layout styles*/
 /* Fixed Menu */
 .section-fixed-menu .navbar {
@@ -584,6 +677,7 @@ body {
 }
 .section-fixed-menu .fixed-menu .search-form .form-group {
   position: relative;
+  margin-right: 15px;
 }
 .section-fixed-menu .fixed-menu .search-form input {
   font-size: 12px;
@@ -608,6 +702,9 @@ body {
   top: 4px;
 }
 
+header {
+  margin-top: 30px;
+}
 header .logo {
   background: url("../img/logo.png") center no-repeat;
   display: block;
@@ -719,6 +816,95 @@ header .section-hot-category-news .container .row .hot-news .row .hot-news-items
 header .section-hot-category-news .container .row .hot-news .row .hot-news-items .slider .item-slider a:hover {
   text-decoration: none;
   color: #e12;
+}
+
+/* Footer */
+footer {
+  margin-top: 10px;
+}
+footer .top-footer {
+  border-top: solid 5px #eee;
+  padding-top: 10px;
+}
+footer .top-footer a:hover {
+  text-decoration: none;
+}
+footer .top-footer .footer-title {
+  color: #333;
+  font-size: 14px;
+  font-weight: bold;
+  text-transform: uppercase;
+  border-bottom: solid 1px #eee;
+  margin-top: 5px;
+  height: 20px;
+}
+footer .top-footer ul {
+  margin-top: -7px;
+}
+footer .top-footer ul li a {
+  font-size: 13px;
+  color: #555;
+}
+footer .logo-footer {
+  background: #aaa;
+  color: #ddd;
+  font-size: 12px;
+  padding: 10px 0;
+}
+footer .logo-footer .logo {
+  background: url("../img/logo-footer.png") center no-repeat;
+  border-right: solid 1px #fff;
+  margin: 0 10px;
+  height: 50px;
+  width: 250px;
+  display: block;
+  float: left;
+}
+footer .logo-footer b {
+  color: #fff;
+  font-size: 14px;
+}
+footer .logo-footer .go-top {
+  background: #ccc url("../img/icon-go-top.png") center no-repeat;
+  margin: 5px 10px;
+  overflow: hidden;
+  height: 40px;
+  width: 40px;
+  border-radius: 2px;
+  box-shadow: 0 1px 2px #aaa;
+  float: right;
+}
+footer .logo-footer .go-top:hover {
+  box-shadow: 0 1px 2px #333;
+}
+footer .site-information-footer {
+  background: #f3f3f3;
+  margin-top: 2px;
+  padding: 10px;
+}
+footer .site-information-footer h4 {
+  color: #333;
+  font-size: 14px;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+footer .site-information-footer p {
+  font-size: 14px;
+  margin: 0;
+}
+footer .site-information-footer a {
+  color: #555;
+}
+footer .site-information-footer a:hover {
+  text-decoration: none;
+}
+footer .copybar {
+  border-top: solid 1px #ccc;
+  color: #e12;
+  font-size: 12px;
+  line-height: 24px;
+  text-align: center;
+  padding-bottom: 15px;
 }
 
 /* Responsive Fix */
