--- a/scss/layouts/_nav.scss
+++ b/scss/layouts/_nav.scss
@@ -55,6 +55,7 @@
             margin-top: 4px;
             .form-group {
                 position: relative;
+                margin-right: 15px;
             }
             input {
                 font-size: 12px;
